--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           node-version: 14
       - name: Install
-        run: npm ci
+        run: npm install
       - name: Check
         run: npm run prettier-check
       - name: Build
