--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,8 +29,8 @@ jobs:
           GITHUB_ACTION_REPOSITORY=Fresa/release-notes-generator \
           GITHUB_ACTION_REF=vTEST \
           node fetch_artifact.js
-      - name: Assert Artifact Downloaded
-        run: ls -d $GITHUB_WORKSPACE/dist/index.js
+      # - name: Assert Artifact Downloaded
+      #   run: ls -d $GITHUB_WORKSPACE/dist/index.js
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
