--- a/action.yml
+++ b/action.yml
@@ -35,11 +35,11 @@ outputs:
   release_notes:
     description: 'Semantic release notes'
 runs:
-  using: "composite"
+  using: 'composite'
   steps:
-    - run: npm run build
-      shell: bash
-    - run: node dist/index.js
+    # - run: npm run build
+    #   shell: bash
+    - run: node lib/index.js
       shell: bash
 branding:
   icon: 'file-text'
